chore: utils 디렉토리 alias 추가

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,8 @@
       "@/base": ["src/components/base"],
       "@/domain": ["src/components/domain"],
       "@/constants": ["src/constants"],
-      "@/types": ["src/types"]
+      "@/types": ["src/types"],
+      "@/utils": ["src/utils"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
