feat: defaultPageLayout 구현 및 _app.tsx를 통해 전체 페이지에 적용

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
     "paths": {
       "@/base": ["src/components/base"],
       "@/domain": ["src/components/domain"],
+      "@/layout": ["src/components/layout"],
       "@/constants": ["src/constants"],
       "@/types": ["src/types"],
       "@/utils": ["src/utils"]
