--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.0",
     "axios": "^0.26.0",
     "next": "12.0.8",
+    "next-redux-wrapper": "^7.0.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-redux": "^7.2.6",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
@@ -30,6 +33,7 @@
     "eslint-plugin-react": "^7.28.0",
     "postcss-syntax": "^0.36.2",
     "prettier": "^2.5.1",
+    "redux-logger": "^3.0.6",
     "stylelint": "^14.2.0",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-recess-order": "^3.0.0",
