--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@stylelint/postcss-css-in-js": "^0.37.2",
     "@types/node": "17.0.10",
     "@types/react": "17.0.38",
+    "@types/redux-logger": "^3.0.9",
     "@types/styled-components": "^5.1.21",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
